# trustee

./: Cargo.toml  Dockerfile.as-grpc  Dockerfile.as-restful  Dockerfile.ci  Dockerfile.frontend  Dockerfile.iam  Dockerfile.kbs  Dockerfile.rvds  Dockerfile.rvps  Dockerfile.trustee-client  Dockerfile.trustee-gateway  README-en.md  README.md  docker-compose.yml  version-base.yml
.cursor/: rules
.github/workflows/: actionlint.yml  as-docker-build.yml  as-e2e.yml  as-rust.yml  docker-build.yml  gateway-check.yml  kbs-docker-build.yml  kbs-docker-e2e.yml  kbs-e2e.yml  kbs-rust.yml  release-rpm.yml  rust-check.yml
APPLICATION/as-grpc/: buildspec.yml  version.yml
APPLICATION/as-restful/: buildspec.yml  version.yml
APPLICATION/ci-image/: buildspec.yml  version.yml
APPLICATION/frontend/: buildspec.yml  version.yml
APPLICATION/kbs/: buildspec.yml  version.yml
APPLICATION/rvps/: buildspec.yml  version.yml
APPLICATION/trustee/: buildspec.yml  version.yml
APPLICATION/trustee-client/: buildspec.yml  version.yml
APPLICATION/trustee-gateway/: buildspec.yml  version.yml
attestation-service/: Cargo.toml  Makefile  build.rs  config.json
attestation-service/docker/: nv_local_gpu_verifier-1.4.0-py3-none-any.whl  verifier-1.2.0-py3-none-any.whl  verifier-1.3.0-py3-none-any.whl
attestation-service/docker/as-grpc/: Dockerfile
attestation-service/docker/as-restful/: Dockerfile
attestation-service/docs/: config.md  parsed_claims.md  policy.md  restful-as.md
attestation-service/src/: challenge.rs  config.rs  lib.rs
attestation-service/src/policy_engine/: mod.rs
attestation-service/src/policy_engine/opa/: mod.rs
attestation-service/src/rvps/: builtin.rs  grpc.rs  mod.rs
attestation-service/src/token/: ear_broker.rs  ear_default_policy_cpu.rego  mod.rs  oidc.rs  oidc_default_policy.rego  signer_transparency.rs  simple.rs
attestation-service/tests/e2e/: Makefile  request.json.template  test_policy_1.rego  test_policy_2.rego
deploy/: .env  .gitignore  docker-compose.yml  pre.sh
deploy/configs/: as-config.json  kbs-config.toml  rvps.json  sgx_default_qcnl.conf  trustee-frontend.conf  trustee-gateway.yml
docs/: as_signer_transparency.md  attestation.md  attestation_result_token.md  challenge_ra.md  iam_user_guide.md  reference.md  rekor.md  resources.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  trustee-frontend-start.sh  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: TokenDetails.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: AAInstancePage.tsx  AuditPage.tsx  HealthPage.tsx  LoginPage.tsx  PoliciesPage.tsx  ResourcesPage.tsx  RvpsPage.tsx
frontend/src/types/: api.ts  token.ts
frontend/src/utils/: auth.ts  tokenAdapter.ts
helm-chart/: README.md
helm-chart/trustee/: Chart.yaml  values.yaml
helm-chart/trustee/files/: ear_default_policy_cpu.rego
helm-chart/trustee/templates/: _helpers.tpl  as-configmap.yaml  as-deployment.yaml  as-policy-configmap.yaml  as-restful-deployment.yaml  as-restful-service.yaml  as-service.yaml  asrestful-ingress.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  gateway-configmap.yaml  gateway-service.yaml  gateway-statefulset.yaml  kbs-configmap.yaml  kbs-ingress.yaml  kbs-role.yaml  kbs-rolebinding.yaml  kbs-service.yaml  kbs-serviceaccount.yaml  kbs-statefulset.yaml  rvps-configmap.yaml  rvps-deployment.yaml  rvps-service.yaml
iam/: ARCHITECTURE_CN.md  Cargo.toml  INTEGRATION_CN.md  README.md
iam/config/: iam.toml
iam/src/: api.rs  attestation.rs  config.rs  error.rs  main.rs  models.rs  policy.rs  service.rs  storage.rs  token.rs
integration-tests/: Cargo.toml
kbs/: Cargo.toml  Makefile  README.md  build.rs
kbs/config/: as-config.json  kbs-config.toml  sgx_default_qcnl.conf
kbs/config/docker-compose/: kbs-config.toml
kbs/docker/coco-as-grpc/: Dockerfile
kbs/docs/: config.md  encrypted_db_key_rotation.md  encrypted_local_fs_key_rotation.md  kbs.yaml  kbs_attestation_protocol.md  resource_storage_backend.md  resource_storage_backend_encrypted_db.md
kbs/docs/plugins/: tpm_pca.md
kbs/kbs-init/: Makefile  go.mod  go.sum  main.go
kbs/kbs-init/watcher/: main.go
kbs/sdk/python/: encrypt_resource.py  reencrypt_resource.py
kbs/src/: api_server.rs  config.rs  error.rs  http.rs  jwe.rs  session.rs
kbs/src/attestation/: backend.rs  config.rs  error.rs  mod.rs
kbs/src/plugins/: plugin_manager.rs
kbs/test/: Makefile  test_attestation_policy_1.rego  test_attestation_policy_2.rego
kbs/tests/: encrypted_db_mysql_e2e.rs  encrypted_db_plugin_init.rs
openanolis/docker/: Dockerfile.as-grpc  Dockerfile.kbs
policy/: pai_default.rego
protos/: attestation.proto  reference.proto
rpm/: challenge-ra-policy.rego  trustee.spec
rpm/Alinux3/: trustee.al8.buildspec.yaml.template
rpm/AnolisOS23/: Dockerfile  README.md  build-in-docker.sh  trustee.an23.buildspec.yaml.template
rvds/: Cargo.toml  README.md
rvds/docs/: architecture.md  audit-guide.md  deployment.md  eth-gateway.md  flow.md  ledger-design.md
rvds/src/: config.rs  error.rs  main.rs  models.rs  routes.rs  state.rs
rvds/src/ledger/: eth_gateway.rs  http.rs  mod.rs  noop.rs
rvps/: Cargo.toml  README.md
rvps/src/: config.rs  lib.rs  provenance_source.rs  reference_value.rs  rekor.rs
test-files/: ear_token.txt  kube-config  sample_attestation_request.json  tdx_ear_token.txt  trustee_function_test.sh
tools/: 0001-Add-unit-tests.patch
tools/as-signer-transparency/: README.md  as-signer-transparency
tools/evidence-dump/: Cargo.toml  README.md
tools/evidence-dump/src/: main.rs
tools/kbs-client/: Cargo.toml
tools/kbs-client/src/: lib.rs  main.rs
tools/slsa/: README.md  audit_reference_value_v2.py  parse_uki_digest.py  rv-release-tool  slsa-generator
trustee-gateway/: .gitignore  INSTALL.md  README.md  config.yaml  go.mod  go.sum  trustee_gateway_api.md
trustee-gateway/test/: attest.sh  audit_cleanup_integration_test.sh  auth.json  auth.sh  register.json  rvps.json  rvps.sh
(+82 files in other folders)
