[workspace]
members = [
    "kbs",
    "attestation-service",
    "rvps",
    "rvds",
    "deps/verifier",
    "deps/eventlog",
    "deps/kms",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["The Confidential Container Authors"]
description = "Confidential Container Tools and Components for the tenant side"
documentation = "https://github.com/confidential-containers/kbs"
edition = "2021"

[workspace.dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
anyhow = "1.0"
argon2 = "0.5"
assert-json-diff = "2.0.2"
async-trait = "0.1.31"
base64 = "0.21"
byteorder = "1.5.0"
cfg-if = "1.0.0"
chrono = "0.4.19"
clap = { version = "4", features = ["derive"] }
config = "0.13.3"
# Use the patched ear which carries the split `cose`/`jwt` features
ear = { git = "https://github.com/inclavare-containers/rust-ear.git", rev = "5cf22512e4b0c446a28d969225fc48abc97c450f", default-features = false, features = ["jwt"] }
env_logger = "0.10.0"
hex = "0.4.3"
jwt-simple = { version = "0.12", default-features = false, features = [
    "pure-rust",
] }
kbs-types = { git = "https://github.com/inclavare-containers/kbs-types.git", rev = "8e36434" }
jsonwebtoken = { version = "9", default-features = false }
log = "0.4.17"
openssl = "0.10.46"
p256 = "0.13.2"
prost = "0.13"
regorus = { version = "0.2.6", default-features = false, features = [
    "regex",
    "base64",
    "time",
    "std",
] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls-native-roots", "json"] }
rstest = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_qs = "0.13.0"
serde_with = { version = "1.11.0", features = ["base64", "hex"] }
serial_test = "0.9.0"
sha2 = "0.10"
shadow-rs = { version = "0.19.0", default-features = false, features = ["tzdb"] }
const_format = "0.2"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "mysql", "sqlite", "any", "json", "chrono"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["full"] }
toml = "0.8.23"
tempfile = "3.4.0"
tonic = "0.12"
tonic-build = "0.12"
serde_yaml = "0.9"
zeroize = { version = "1.7", features = ["derive"] }
