[package]
name = "attestation-service"
version = "0.1.0"
edition = "2021"

[features]
default = [ "restful-bin", "rvps-grpc", "all-verifier" ]
all-verifier = [ "verifier/all-verifier" ]
# Like `all-verifier`, but the TDX verifier uses the dcap-qvl backend and SGX is
# dropped (it would still link the DCAP shared library). See
# deps/verifier/src/tdx/verify/native.rs.
all-verifier-rust = [ "verifier/all-verifier-rust" ]
# `tdx-verifier` keeps its historical meaning (DCAP shared library backend) for
# backward compatibility. The dcap-qvl backend is opt-in via `tdx-dcap-rust`.
tdx-verifier = [ "verifier/tdx-dcap-ffi" ]
tdx-dcap-ffi = [ "verifier/tdx-dcap-ffi" ]
tdx-dcap-rust = [ "verifier/tdx-dcap-rust" ]
sgx-verifier = [ "verifier/sgx-verifier" ]
az-snp-vtpm-verifier = [ "verifier/az-snp-vtpm-verifier" ]
az-tdx-vtpm-verifier = [ "verifier/az-tdx-vtpm-verifier" ]
snp-verifier = [ "verifier/snp-verifier" ]
csv-verifier = [ "verifier/csv-verifier" ]
hygon-dcu-verifier = ["verifier/hygon-dcu-verifier"]
# cca-verifier = [ "verifier/cca-verifier" ]
se-verifier  = [ "verifier/se-verifier" ]
system-verifier = [ "verifier/system-verifier" ]
tpm-verifier = [ "verifier/tpm-verifier" ]

rvps-grpc = [ "prost", "tonic" ]

# For building gRPC CoCo-AS binary
grpc-bin = [ "clap", "env_logger", "prost", "tonic" ]

# For restful CoCo-AS binary
restful-bin = [ "actix-cors", "actix-web/openssl", "clap", "env_logger", "openssl" ]

[[bin]]
name = "grpc-as"
required-features = [ "grpc-bin" ]

[[bin]]
name = "restful-as"
required-features = [ "restful-bin" ]

[[bin]]
name = "attestation-challenge-client"
path = "src/bin/attestation-challenge-client/main.rs"

[dependencies]
# Pinned to 0.7.0: actix-cors 0.7.1 pulls in derive_more 2.x which requires
# rustc >= 1.81, while this fork's toolchain is 1.76. 0.7.0 uses derive_more
# 0.99 and builds fine. Bump once the MSRV is raised.
actix-cors = { version = "=0.7.0", optional = true }
actix-web = { workspace = true, optional = true }
aes-gcm = "0.10"
aes-kw = "0.2"
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
canon-json = { git = "https://github.com/inclavare-containers/canon-json-rs" }
cfg-if.workspace = true
clap = { workspace = true, optional = true }
concat-kdf = "0.1"
ear.workspace = true
env_logger = { workspace = true, optional = true }
futures = "0.3.17"
hex.workspace = true
jsonwebtoken.workspace = true
kbs-types.workspace = true
lazy_static = "1.4.0"
log.workspace = true
openssl = { version = "0.10.55", optional = true }
p256 = { version = "0.13", features = ["ecdh", "pkcs8", "pem"] }
prost = { workspace = true, optional = true }
rand = "0.8.5"
reqwest.workspace = true
rsa = { version = "0.9.2", features = ["sha2"] }
reference-value-provider-service.path = "../rvps"
regorus.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_variant = "0.1.2"
sha2.workspace = true
sm3 = "0.4.2"
shadow-rs.workspace = true
strum.workspace = true
tempfile.workspace = true
time = { version = "0.3.23", features = ["std"] }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tonic = { workspace = true, optional = true }
uuid = { version = "1.1.2", features = ["v4"] }
verifier = { path = "../deps/verifier", default-features = false }
# x509-cert is used by `token/simple.rs` for PEM/DER certificate-chain parsing
# (JWK `x5c`). Pulled in as a direct dep so `simple.rs` can call
# `Certificate::from_pem` / `to_der`. The `pem` feature enables
# `der::DecodePem` (used by `from_pem`); `std` is part of the default set.
x509-cert = { version = "0.2.5", default-features = false, features = ["pem", "std"] }

[build-dependencies]
shadow-rs.workspace = true
tonic-build.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
hex.workspace = true
rstest.workspace = true
serial_test.workspace = true
sha2.workspace = true
testing_logger = "0.1.1"
