[package]
name = "evidence-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
attester = { git = "ssh://git@gitlab.alibaba-inc.com/Trustiflux/guest-components.git", branch = "master", default-features = false }
base64 = "0.21.0"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }

[features]
default = ["csv", "tdx", "system"]
csv = ["attester/csv-attester"]
tdx = ["attester/tdx-attester"]
system = ["attester/system-attester"]